--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: azure/docker-login@v1
         with:
           login-server: ${{env.IMAGE_REGISTRY_URL}}
-          username: ${{ github.actor }}
+          username: l00170155
           password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Deploy app Container
