--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,8 +1,9 @@
 name: Configure Azure environment
 
 on:
-  pull_request:
-    types: [labeled]
+  push:
+    branches: 
+     - main
     
 env: 
   DOCKER_IMAGE_NAME: l00170155-azure-ttt
@@ -12,8 +13,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    if: contains(github.event.pull_request.labels.*.name, 'stage')
     
     steps:
       - uses: actions/checkout@v2
